--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
   "name": "cache-content-type",
   "version": "1.0.1",
-  "description": "Create a full Content-Type header given a MIME type or extension and catch the result",
-  "main": "index.js",
-  "files": [
-    "index.js"
-  ],
+  "engines": {
+    "node": ">= 18.0.0"
+  },
+  "description": "Create a full Content-Type header given a MIME type or extension and cache the result",
   "scripts": {
-    "test": "egg-bin test",
-    "cov": "egg-bin cov",
-    "ci": "eslint . && npm run cov"
+    "test": "npm run lint -- --fix && egg-bin test",
+    "ci": "npm run lint && egg-bin cov && npm run prepublishOnly",
+    "lint": "eslint src test",
+    "prepublishOnly": "tshy && tshy-after"
   },
   "dependencies": {
-    "mime-types": "^2.1.18",
-    "ylru": "^1.2.0"
+    "mime-types": "^2.1.35",
+    "ylru": "^1.4.0"
   },
   "devDependencies": {
-    "egg-bin": "^4.7.1",
-    "egg-ci": "^1.8.0",
-    "eslint": "^5.1.0",
-    "eslint-config-egg": "^7.0.0",
-    "mm": "^2.2.0"
+    "@eggjs/tsconfig": "^1.3.3",
+    "@types/mime-types": "^2.1.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.2.5",
+    "egg-bin": "6",
+    "eslint": "8",
+    "eslint-config-egg": "13",
+    "mm": "3",
+    "tshy": "^1.15.1",
+    "tshy-after": "^1.0.0",
+    "typescript": "^5.4.5"
   },
   "repository": {
     "type": "git",
@@ -31,12 +37,34 @@
     "content-type",
     "lru"
   ],
-  "engines": {
-    "node": ">= 6.0.0"
-  },
-  "ci": {
-    "version": "6, 8, 10"
-  },
   "author": "dead_horse",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module",
+  "tshy": {
+    "exports": {
+      "./package.json": "./package.json",
+      ".": "./src/index.ts"
+    }
+  },
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "import": {
+        "source": "./src/index.ts",
+        "types": "./dist/esm/index.d.ts",
+        "default": "./dist/esm/index.js"
+      },
+      "require": {
+        "source": "./src/index.ts",
+        "types": "./dist/commonjs/index.d.ts",
+        "default": "./dist/commonjs/index.js"
+      }
+    }
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
+  "main": "./dist/commonjs/index.js",
+  "types": "./dist/commonjs/index.d.ts"
 }
