--- a/package.json
+++ b/package.json
@@ -6,27 +6,31 @@
   },
   "description": "Create a full Content-Type header given a MIME type or extension and cache the result",
   "scripts": {
-    "test": "npm run lint -- --fix && egg-bin test",
-    "ci": "npm run lint && egg-bin cov && npm run prepublishOnly",
+    "clean": "tsc --build --clean",
+    "pretest": "npm run clean && npm run lint -- --fix",
+    "test": "egg-bin test",
+    "preci": "npm run clean && npm run lint",
+    "ci": "egg-bin cov",
+    "postci": "npm run prepublishOnly && npm run clean",
     "lint": "eslint src test",
     "prepublishOnly": "tshy && tshy-after"
   },
   "dependencies": {
     "mime-types": "^2.1.35",
-    "ylru": "^1.4.0"
+    "ylru": "^2.0.0"
   },
   "devDependencies": {
-    "@eggjs/tsconfig": "^1.3.3",
-    "@types/mime-types": "^2.1.4",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.2.5",
-    "egg-bin": "6",
+    "@eggjs/tsconfig": "2",
+    "@types/mime-types": "2",
+    "@types/mocha": "10",
+    "@types/node": "^22",
+    "@eggjs/bin": "7",
     "eslint": "8",
-    "eslint-config-egg": "13",
-    "mm": "3",
-    "tshy": "^1.15.1",
-    "tshy-after": "^1.0.0",
-    "typescript": "^5.4.5"
+    "eslint-config-egg": "14",
+    "mm": "4",
+    "tshy": "3",
+    "tshy-after": "1",
+    "typescript": "5"
   },
   "repository": {
     "type": "git",
@@ -50,12 +54,10 @@
     "./package.json": "./package.json",
     ".": {
       "import": {
-        "source": "./src/index.ts",
         "types": "./dist/esm/index.d.ts",
         "default": "./dist/esm/index.js"
       },
       "require": {
-        "source": "./src/index.ts",
         "types": "./dist/commonjs/index.d.ts",
         "default": "./dist/commonjs/index.js"
       }
@@ -66,5 +68,6 @@
     "src"
   ],
   "main": "./dist/commonjs/index.js",
-  "types": "./dist/commonjs/index.d.ts"
+  "types": "./dist/commonjs/index.d.ts",
+  "module": "./dist/esm/index.js"
 }
